c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_decl_tag_kw.c
// cannot use keyword (like 'for') as struct tag
struct for {
    int a;
};